--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,87 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+.btn{
+  padding: 10px 100px;
+  font-size: 20px;
+  border-radius: 30px;
+  background-color: blue;
+  color: white ;
+}
+.homeImg{
+  /* max-width: 100%; */
+  clip-path: polygon(0% 15%, 0 0, 53% 0, 62% 6%, 64% 14%, 63% 24%, 49% 71%, 42% 85%, 34% 92%, 27% 96%, 13% 96%, 0 91%);
+}
+.home, .allModules{
+  display: grid;
+  grid-template-columns:2fr 1fr;
+  align-items: center;
+  justify-content: center;
+  margin: 20px;
+}
+.outer{
+  border: 2px solid red;
+}
+.info{
+  border: 2px solid red;
+}
+.home .info *{
+  margin: 30px;
+ 
+}
+.home .info p{
+  line-height: 25px;
+}
+.links ul{
+   display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+   text-align: center;
+   background-color: blue;
+   margin: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.links ul li{
+  font-size: 1.1rem;
+  padding: .3rem;
+  display: block;
+  font-weight: bold;
+  box-shadow: var(--shadow);
+  border: 1px solid white;
+}
+
+.display{
+  display: grid;
+  grid-template-columns:repeat(auto-fit, minmax(200px, 1fr));
+  height: 80vh;
+  justify-items: center;
+  align-items: center;
+  margin: 20px;
+}
+
+img{
+  max-width: 100%;
+  margin-right: 40px;
+}
+.text{
+  line-height: 30px;
+}
+.text h1{
+  margin-bottom: 20px;
+}
+
+.allModules ul{
+  list-style: none;
+ 
+}
+.allModules ul li{
+  border-bottom:2px solid blue;
+  margin: 40px;
+
+}
+.allModules ul li a{
+  text-decoration: none;
+  font-size: 25px;
+  color: blue;
 }
