--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,11 @@
   border-radius: 30px;
   background-color: blue;
   color: white ;
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  align-items: center;
 }
 .homeImg{
   /* max-width: 100%; */
@@ -19,20 +24,20 @@
   grid-template-columns:2fr 1fr;
   align-items: center;
   justify-content: center;
-  margin: 20px;
 }
-.outer{
+/* .outer{
   border: 2px solid red;
-}
-.info{
+} */
+/* .info{
   border: 2px solid red;
-}
-.home .info *{
+} */
+/* .home .info *{
   margin: 30px;
  
-}
+} */
 .home .info p{
-  line-height: 25px;
+  line-height: 40px;
+  margin: 30px 30px 30px 0px;
 }
 .links ul{
    display: grid;
@@ -77,11 +82,10 @@ img{
 }
 .allModules ul li{
   border-bottom:2px solid blue;
-  margin: 40px;
-
-}
-.allModules ul li a{
-  text-decoration: none;
-  font-size: 25px;
+ margin-bottom: 40px;
+ margin-right: 40px;
   color: blue;
+  font-size: 25px;
+  cursor: pointer;
 }
+
